welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:19: error: not found: value case_=>
  case_=> fini=true
  ^